Bug 1347833 - Add support to wrap long request parameters/cookies in the netmonitor sidebar. r=Honza
MozReview-Commit-ID: LYQvQzxRC5G

UltraBlame original commit: a71dd9ce8a166bf5781ecbc53ead54bd50f4f8f2

--- a/devtools/client/netmonitor/src/assets/styles/netmonitor.css
+++ b/devtools/client/netmonitor/src/assets/styles/netmonitor.css
@@ -4559,6 +4559,32 @@ auto
 ;
 }
 .
+panel
+-
+container
+.
+tree
+-
+container
+.
+objectBox
+{
+white
+-
+space
+:
+normal
+;
+word
+-
+wrap
+:
+break
+-
+word
+;
+}
+.
 properties
 -
 view
